Refactored solutions. Added utils library.

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "type": "module",
   "scripts": {
-    "test": "mocha day*/test.js"
+    "test": "mocha solutions/day*/test.js"
   },
   "keywords": [],
   "author": "",
